--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,14 +19,15 @@
     <dimen name="restaurant_item_height">150dp</dimen>
     <dimen name="restaurant_item_elevation">4dp</dimen>
     <dimen name="restaurant_item_corner_radius">10dp</dimen>
-    <dimen name="restaurant_info_menu_text_size">10dp</dimen>
+    <dimen name="restaurant_info_menu_text_size">10dp</dimen> <!--메뉴 제목/내용-->
     <dimen name="restaurant_info_text_size_name">12dp</dimen>
+    <dimen name="restaurant_info_name_margin_bottom">4dp</dimen>
     <dimen name="restaurant_info_text_size">8dp</dimen>
-    <dimen name="restaurant_info_text_size_more">8dp</dimen>
-    <dimen name="restaurant_info_text_margin_bottom">2.5dp</dimen>
+    <dimen name="restaurant_info_text_size_more">8dp</dimen> <!--'자세히 보기' 텍스트-->
+    <dimen name="restaurant_info_text_margin_bottom">2dp</dimen>
     <dimen name="restaurant_info_image_size">66dp</dimen>
     <dimen name="restaurant_info_margin_size_8dp">8dp</dimen>
-    <dimen name="restaurant_info_padding_size_8dp">8dp</dimen>
+    <dimen name="restaurant_info_padding_size">8dp</dimen>
     
     <!--메뉴 정보 다이얼로그 관련-->
     <dimen name="menu_title_text_size">16dp</dimen>
