--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -19,11 +19,14 @@
     <dimen name="restaurant_item_height">150dp</dimen>
     <dimen name="restaurant_item_elevation">4dp</dimen>
     <dimen name="restaurant_item_corner_radius">10dp</dimen>
-    <dimen name="restaurant_info_menu_text_size">12dp</dimen>
+    <dimen name="restaurant_info_menu_text_size">12dp</dimen> <!--메뉴 제목/내용-->
+    <dimen name="restaurant_info_menu_weight_sum">12</dimen>
+    <dimen name="restaurant_info_menu_title_weight">3</dimen>
+    <dimen name="restaurant_info_menu_content_weight">9</dimen>
     <dimen name="restaurant_info_text_size_name">14dp</dimen>
     <dimen name="restaurant_info_name_margin_bottom">6dp</dimen>
     <dimen name="restaurant_info_text_size">10dp</dimen>
-    <dimen name="restaurant_info_text_size_more">10dp</dimen>
+    <dimen name="restaurant_info_text_size_more">10dp</dimen> <!--'자세히 보기' 텍스트-->
     <dimen name="restaurant_info_text_margin_bottom">4dp</dimen>
     <dimen name="restaurant_info_image_size">66dp</dimen>
     <dimen name="restaurant_info_margin_size_8dp">8dp</dimen>
