--- a/app/src/main/res/drawable/current_location_button.xml
+++ b/app/src/main/res/drawable/current_location_button.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape>
-            <solid android:color="@color/colorSecondary"/>
+            <solid android:color="@color/colorPrimary"/>
             <corners
                 android:bottomLeftRadius="32dp"
                 android:bottomRightRadius="32dp"
