--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -14,15 +14,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/restaurant_info_padding_size_8dp"
+        android:padding="@dimen/restaurant_info_padding_size"
         >
 
+        <!--메뉴 레이아웃-->
         <LinearLayout
             android:id="@+id/restaurant_menu_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="10sp"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toTopOf="@+id/restaurant_name_tv"
             android:visibility="gone"
             tool:visibility="visible"
@@ -34,17 +35,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="top"
-                android:weightSum="10"
+                android:weightSum="@dimen/restaurant_info_menu_weight_sum"
                 >
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="메인 메뉴"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
-                    android:layout_weight="2"
+                    android:layout_weight="@dimen/restaurant_info_menu_title_weight"
                     />
 
                 <TextView
@@ -52,9 +53,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tool:text="카레 염지 순살치킨, 제육볶음, 알리오 올리오 스파게티, 닭강정, 봉황 감자탕"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textColor="@color/gray900"
-                    android:layout_weight="8"
+                    android:layout_weight="@dimen/restaurant_info_menu_content_weight"
                     />
 
             </LinearLayout>
@@ -73,17 +74,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="top"
-                android:weightSum="10"
+                android:weightSum="@dimen/restaurant_info_menu_weight_sum"
                 >
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="사이드 메뉴"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
-                    android:layout_weight="2"
+                    android:layout_weight="@dimen/restaurant_info_menu_title_weight"
                     />
 
                 <TextView
@@ -91,9 +92,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tool:text="반찬 3종, 김치, 샐러드"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textColor="@color/gray900"
-                    android:layout_weight="8"
+                    android:layout_weight="@dimen/restaurant_info_menu_content_weight"
                     />
 
             </LinearLayout>
@@ -112,17 +113,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="top"
-                android:weightSum="10"
+                android:weightSum="@dimen/restaurant_info_menu_weight_sum"
                 >
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="후식"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
-                    android:layout_weight="2"
+                    android:layout_weight="@dimen/restaurant_info_menu_title_weight"
                     />
 
                 <TextView
@@ -130,9 +131,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tool:text="토스트(누텔라, 딸기잼), 매실차"
-                    android:textSize="@dimen/restaurant_info_text_size"
+                    android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textColor="@color/gray900"
-                    android:layout_weight="8"
+                    android:layout_weight="@dimen/restaurant_info_menu_content_weight"
                     />
 
             </LinearLayout>
@@ -146,13 +147,14 @@
 
         </LinearLayout>
 
+        <!--'자세히 보기' 버튼-->
         <TextView
             android:id="@+id/restaurant_menu_more_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/restaurant_info_menu_more"
             android:textColor="@color/gray500"
-            android:textSize="@dimen/restaurant_info_text_size_8sp"
+            android:textSize="@dimen/restaurant_info_text_size_more"
             android:textStyle="bold"
             android:layout_marginTop="4dp"
             android:paddingBottom="6dp"
@@ -164,17 +166,19 @@
             tool:visibility="visible"
             />
 
+        <!--식당 이름-->
         <TextView
             android:id="@+id/restaurant_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginBottom="4sp"
+            android:layout_marginBottom="@dimen/restaurant_info_name_margin_bottom"
             android:textColor="@color/gray900"
-            android:textSize="12dp"
+            android:textSize="@dimen/restaurant_info_text_size_name"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/restaurant_price_layout"
             app:layout_constraintStart_toStartOf="parent"
-            tool:text="식당 이름" />
+            tool:text="식당 이름"
+            />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/restaurant_cv"
@@ -204,7 +208,8 @@
             android:layout_marginBottom="@dimen/restaurant_info_text_margin_bottom"
             app:layout_constraintBottom_toTopOf="@+id/restaurant_time_layout"
             app:layout_constraintEnd_toStartOf="@+id/restaurant_cv"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -215,7 +220,8 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <TextView
                 android:id="@+id/restaurant_price_tv"
@@ -226,7 +232,8 @@
                 android:textSize="@dimen/restaurant_info_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -239,7 +246,8 @@
             android:layout_marginBottom="@dimen/restaurant_info_text_margin_bottom"
             app:layout_constraintBottom_toTopOf="@+id/restaurant_phone_number_layout"
             app:layout_constraintEnd_toStartOf="@+id/restaurant_cv"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -250,7 +258,8 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <TextView
                 android:id="@+id/restaurant_time_tv"
@@ -261,7 +270,8 @@
                 android:textSize="@dimen/restaurant_info_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -274,7 +284,8 @@
             android:layout_marginBottom="@dimen/restaurant_info_text_margin_bottom"
             app:layout_constraintBottom_toTopOf="@+id/restaurant_location_description_layout"
             app:layout_constraintEnd_toStartOf="@+id/restaurant_cv"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -285,7 +296,8 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <TextView
                 android:id="@+id/restaurant_phone_number_tv"
@@ -296,7 +308,8 @@
                 android:textSize="@dimen/restaurant_info_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -320,7 +333,8 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <TextView
                 android:id="@+id/restaurant_location_description_tv"
@@ -331,11 +345,11 @@
                 android:textSize="@dimen/restaurant_info_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.cardview.widget.CardView>
