--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--상단 지역 설정 레이아웃 관련-->
+    <dimen name="location_select_layout_padding_vertical">8dp</dimen>
+    <dimen name="location_select_layout_padding_horizontal">14dp</dimen>
+    <dimen name="location_select_layout_feedback_button_width">16dp</dimen>
+    <dimen name="location_select_layout_feedback_button_height">13dp</dimen>
+    <dimen name="location_select_layout_feedback_button_padding">8dp</dimen>
+    <dimen name="location_select_button_width">50dp</dimen>
+    <dimen name="location_select_button_height">25dp</dimen>
+    <dimen name="location_select_button_text">12dp</dimen>
+    <dimen name="location_select_button_margin_start">8dp</dimen>
+
+    <!--'내 주변' 버튼 관련-->
+    <dimen name="current_location_width">60dp</dimen>
+    <dimen name="current_location_height">24dp</dimen>
+    <dimen name="current_location_image_margin_end">2dp</dimen>
+    <dimen name="current_location_text_size">10dp</dimen>
+
     <dimen name="pageMargin">1dp</dimen>
     <dimen name="offset">10dp</dimen>
     <dimen name="pageMarginAndOffset">11dp</dimen> <!--pageMargin과 offset의 합이어야 함-->
@@ -8,14 +25,24 @@
     <dimen name="restaurant_item_height">150dp</dimen>
     <dimen name="restaurant_item_elevation">4dp</dimen>
     <dimen name="restaurant_item_corner_radius">10dp</dimen>
-    <dimen name="restaurant_info_text_size">10sp</dimen>
-    <dimen name="restaurant_info_text_size_8sp">8sp</dimen>
-    <dimen name="restaurant_info_text_margin_bottom">2.5sp</dimen>
+    <dimen name="restaurant_info_menu_text_size">10dp</dimen> <!--메뉴 제목/내용-->
+    <dimen name="restaurant_info_menu_weight_sum">10</dimen>
+    <dimen name="restaurant_info_menu_title_weight">2</dimen>
+    <dimen name="restaurant_info_menu_content_weight">8</dimen>
+    <dimen name="restaurant_info_text_size_name">12dp</dimen>
+    <dimen name="restaurant_info_name_margin_bottom">4dp</dimen>
+    <dimen name="restaurant_info_text_size">8dp</dimen>
+    <dimen name="restaurant_info_text_size_more">8dp</dimen> <!--'자세히 보기' 텍스트-->
+    <dimen name="restaurant_info_text_margin_bottom">2dp</dimen>
     <dimen name="restaurant_info_image_size">66dp</dimen>
     <dimen name="restaurant_info_margin_size_8dp">8dp</dimen>
-    <dimen name="restaurant_info_padding_size_8dp">8dp</dimen>
+    <dimen name="restaurant_info_padding_size">8dp</dimen>
     
     <!--메뉴 정보 다이얼로그 관련-->
-    <dimen name="menu_title_text_size">16sp</dimen>
-    <dimen name="menu_content_text_size">14sp</dimen>
+    <dimen name="menu_title_text_size">16dp</dimen>
+    <dimen name="menu_content_text_size">14dp</dimen>
+
+    <!--위치 권한 동의 다이얼로그 관련-->
+    <dimen name="location_permission_description_text_size">12dp</dimen>
+    <dimen name="location_permission_button_text_size">12dp</dimen>
 </resources>
