fix: 가로 스크롤 뷰 아이템 폰트 적용

--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -42,6 +42,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="메인 메뉴"
+                    android:fontFamily="@font/pretendard_semibold"
                     android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
@@ -53,6 +54,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tool:text="카레 염지 순살치킨, 제육볶음, 알리오 올리오 스파게티, 닭강정, 봉황 감자탕"
+                    android:fontFamily="@font/pretendard_regular"
                     android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textColor="@color/gray900"
                     android:layout_weight="@dimen/restaurant_info_menu_content_weight"
@@ -81,6 +83,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="사이드 메뉴"
+                    android:fontFamily="@font/pretendard_semibold"
                     android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
@@ -92,6 +95,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tool:text="반찬 3종, 김치, 샐러드"
+                    android:fontFamily="@font/pretendard_regular"
                     android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textColor="@color/gray900"
                     android:layout_weight="@dimen/restaurant_info_menu_content_weight"
@@ -120,6 +124,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="후식"
+                    android:fontFamily="@font/pretendard_semibold"
                     android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
@@ -131,6 +136,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     tool:text="토스트(누텔라, 딸기잼), 매실차"
+                    android:fontFamily="@font/pretendard_regular"
                     android:textSize="@dimen/restaurant_info_menu_text_size"
                     android:textColor="@color/gray900"
                     android:layout_weight="@dimen/restaurant_info_menu_content_weight"
@@ -153,6 +159,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/restaurant_info_menu_more"
+            android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/gray500"
             android:textSize="@dimen/restaurant_info_text_size_more"
             android:textStyle="bold"
@@ -172,6 +179,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginBottom="@dimen/restaurant_info_name_margin_bottom"
+            android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/gray900"
             android:textSize="@dimen/restaurant_info_text_size_name"
             android:textStyle="bold"
@@ -215,6 +223,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/restaurant_info_price"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textColor="@color/gray800"
                 android:textSize="@dimen/restaurant_info_text_size"
                 android:textStyle="bold"
@@ -228,6 +237,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tool:text="8,000원"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/gray900"
                 android:textSize="@dimen/restaurant_info_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -253,6 +263,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/restaurant_info_time"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textColor="@color/gray800"
                 android:textSize="@dimen/restaurant_info_text_size"
                 android:textStyle="bold"
@@ -265,7 +276,8 @@
                 android:id="@+id/restaurant_time_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="11:00 ~ 14:00"
+                tool:text="11:00 ~ 14:00"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/gray900"
                 android:textSize="@dimen/restaurant_info_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -291,6 +303,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/restaurant_info_phone_number"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textColor="@color/gray800"
                 android:textSize="@dimen/restaurant_info_text_size"
                 android:textStyle="bold"
@@ -303,7 +316,8 @@
                 android:id="@+id/restaurant_phone_number_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="02-950-2345"
+                tool:text="02-950-2345"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/gray900"
                 android:textSize="@dimen/restaurant_info_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -328,6 +342,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/restaurant_info_location_description"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textColor="@color/gray800"
                 android:textSize="@dimen/restaurant_info_text_size"
                 android:textStyle="bold"
@@ -340,7 +355,8 @@
                 android:id="@+id/restaurant_location_description_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="서울 서초구 서초대로78길 38, 지하 1층"
+                tool:text="서울 서초구 서초대로78길 38, 지하 1층"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/gray900"
                 android:textSize="@dimen/restaurant_info_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
