--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:background="@drawable/white_button_background"
             android:stateListAnimator="@null"
             android:text="강남"
+            android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/gray600"
             android:textSize="@dimen/location_select_button_text"
             android:textStyle="bold"
@@ -37,6 +38,7 @@
             android:background="@drawable/white_button_background"
             android:stateListAnimator="@null"
             android:text="역삼"
+            android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/gray600"
             android:textSize="@dimen/location_select_button_text"
             android:textStyle="bold"
@@ -90,6 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="내 주변"
+                android:fontFamily="@font/pretendard_bold"
                 android:textColor="@color/colorSecondary"
                 android:textSize="@dimen/current_location_text_size"
                 android:textStyle="bold"
