--- a/app/src/main/res/layout/dialog_location_permission.xml
+++ b/app/src/main/res/layout/dialog_location_permission.xml
@@ -14,6 +14,7 @@
         android:id="@+id/permission_description_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/pretendard_regular"
         android:textColor="@color/gray700"
         android:textSize="@dimen/location_permission_description_text_size"
         android:gravity="center"
@@ -32,6 +33,7 @@
             android:layout_height="30dp"
             android:stateListAnimator="@null"
             android:text="취소"
+            android:fontFamily="@font/pretendard_regular"
             android:textSize="@dimen/location_permission_button_text_size"
             android:textColor="@color/gray600"
             android:background="@drawable/white_button_background"
@@ -44,6 +46,7 @@
             android:layout_height="30dp"
             android:stateListAnimator="@null"
             android:text="동의"
+            android:fontFamily="@font/pretendard_regular"
             android:textSize="14dp"
             android:textColor="@color/white"
             android:background="@drawable/color_button_background"
