--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -35,6 +35,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="메인 메뉴"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textSize="@dimen/menu_title_text_size"
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimary"
@@ -47,6 +48,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 tool:text="카레 염지 순살치킨, 제육볶음, 알리오 올리오 스파게티, 닭강정, 봉황 감자탕"
+                android:fontFamily="@font/pretendard_regular"
                 android:textSize="@dimen/menu_content_text_size"
                 android:textColor="@color/gray900"
                 android:layout_gravity="top"
@@ -75,6 +77,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="사이드 메뉴"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textSize="@dimen/menu_title_text_size"
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimary"
@@ -87,6 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 tool:text="반찬 3종, 김치, 샐러드"
+                android:fontFamily="@font/pretendard_regular"
                 android:textSize="@dimen/menu_content_text_size"
                 android:textColor="@color/gray900"
                 android:layout_gravity="top"
@@ -116,6 +120,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="후식"
+                android:fontFamily="@font/pretendard_semibold"
                 android:textSize="@dimen/menu_title_text_size"
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimary"
@@ -128,6 +133,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 tool:text="토스트(누텔라, 딸기잼), 매실차"
+                android:fontFamily="@font/pretendard_regular"
                 android:textSize="@dimen/menu_content_text_size"
                 android:textColor="@color/gray900"
                 android:layout_gravity="top"
