--- a/app/src/main/res/drawable/current_location_icon.xml
+++ b/app/src/main/res/drawable/current_location_icon.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="12">
   <path
       android:pathData="M4.787,2V0.5L2.82,2.5L4.787,4.5V3C6.415,3 7.738,4.345 7.738,6C7.738,6.505 7.615,6.985 7.393,7.4L8.111,8.13C8.495,7.515 8.721,6.785 8.721,6C8.721,3.79 6.961,2 4.787,2ZM4.787,9C3.159,9 1.836,7.655 1.836,6C1.836,5.495 1.959,5.015 2.18,4.6L1.462,3.87C1.079,4.485 0.852,5.215 0.852,6C0.852,8.21 2.613,10 4.787,10V11.5L6.754,9.5L4.787,7.5V9Z"
-      android:fillColor="@color/colorSecondary"/>
+      android:fillColor="@color/colorPrimary"/>
 </vector>
