fix: 개발 환경에서의 restaurant 콜렉션 변경(배포 환경과 동일)

--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -14,7 +14,7 @@
   </entry>
   <entry>
     <key>RESTAURANT_COLLECTION_DEV</key>
-    <value>restaurants-dev</value>
+    <value>restaurants</value>
   </entry>
   <entry>
     <key>RESTAURANT_COLLECTION_PROD</key>
