--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/restaurant_info_padding_size"
+        android:background="@color/white"
         >
 
         <!--메뉴 레이아웃-->
