fix: 메뉴 다이얼로그의 width가 일정하지 않은 현상 해결(#26)
- style 적용 + onCreate()에서 width 설(

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,4 +15,8 @@
         <!-- Customize your theme here. -->
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="custom_style_dialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:layout_marginStart">4dp</item>
+        <item name="android:layout_marginEnd">4dp</item>
+    </style>
 </resources>
