feat: 제보 URL(카카오톡 오픈 채팅) 이동 로직 구현

--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -24,4 +24,9 @@
     <key>RESTAURANT_COLLECTION_PROD</key>
     <value>restaurants</value>
   </entry>
+  <entry>
+    <key>REPORT_MENU_URL</key>
+    <value>https://open.kakao.com/o/gKPs3pif</value>
+  </entry>
+
 </defaults>
