--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="current_location_height">30dp</dimen>
     <dimen name="current_location_image_margin_end">4dp</dimen>
     <dimen name="current_location_text_size">12dp</dimen>
+    <dimen name="current_location_loading_icon_size">120dp</dimen>
 
     <dimen name="pageMargin">1dp</dimen>
     <dimen name="offset">10dp</dimen>
