--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="gray800">#424242</color>
     <color name="gray900">#212121</color>
     <color name="blackTransparent">#40000000</color>
+    <color name="colorAccent">#FA560F</color>
 </resources>
