--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,6 +40,8 @@
     <dimen name="restaurant_info_padding_size">8dp</dimen>
     
     <!--메뉴 정보 다이얼로그 관련-->
+    <dimen name="menu_date_text_size">10dp</dimen>
+    <dimen name="menu_provider_text_size">10dp</dimen>
     <dimen name="menu_title_text_size">16dp</dimen>
     <dimen name="menu_content_text_size">14dp</dimen>
 
