feat: 앱 최신 버전 관련 remote config 로직 구현

--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -28,5 +28,13 @@
     <key>REPORT_MENU_URL</key>
     <value>https://open.kakao.com/o/gKPs3pif</value>
   </entry>
+  <entry>
+    <key>LATEST_APP_VERSION_AOS_DEV</key>
+    <value>1</value>
+  </entry>
+  <entry>
+    <key>LATEST_APP_VERSION_AOS_PROD</key>
+    <value>1</value>
+  </entry>
 
 </defaults>
