--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -41,8 +41,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:text="내가 먼저 메뉴 제보하기"
-                android:textSize="14dp"
+                android:text="@string/restaurant_info_menu_report_button"
+                android:textSize="@dimen/menu_report_button_text_size"
                 android:textColor="@color/white"
                 android:fontFamily="@font/pretendard_semibold"
                 android:background="@drawable/color_button_background"
@@ -61,9 +61,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="메뉴는 매일 11시에 업데이트됩니다."
+                android:text="@string/restaurant_info_menu_report_description"
                 android:layout_gravity="center"
-                android:textSize="10dp"
+                android:textSize="@dimen/menu_report_description_text_size"
                 android:textColor="@color/black"
                 android:fontFamily="@font/pretendard_regular"
                 android:layout_marginBottom="6dp"
