--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -44,6 +44,8 @@
     <dimen name="menu_provider_text_size">10dp</dimen>
     <dimen name="menu_title_text_size">16dp</dimen>
     <dimen name="menu_content_text_size">14dp</dimen>
+    <dimen name="menu_report_button_text_size">14dp</dimen>
+    <dimen name="menu_report_description_text_size">12dp</dimen>
 
     <!--위치 권한 동의 다이얼로그 관련-->
     <dimen name="location_permission_description_text_size">14dp</dimen>
