--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,14 @@
     tools:context="com.woozoo.menumonya.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/location_select_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/region_layout_height"
         android:background="@color/white"
-        android:paddingHorizontal="@dimen/location_select_layout_padding_horizontal"
-        android:paddingVertical="@dimen/location_select_layout_padding_vertical">
+        android:paddingHorizontal="@dimen/region_layout_padding_horizontal"
+        android:paddingVertical="@dimen/region_layout_padding_vertical">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/region_recycler_view"
+            android:id="@+id/region_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
