--- a/app/src/main/res/layout/item_region.xml
+++ b/app/src/main/res/layout/item_region.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:background="@drawable/selector_location_button"
     android:gravity="center"
-    android:padding="8dp"
+    android:paddingVertical="@dimen/region_button_padding_vertical"
+    android:paddingHorizontal="@dimen/region_button_padding_horizontal"
+    android:layout_marginEnd="@dimen/region_button_margin"
     >
 
     <TextView
@@ -15,7 +17,7 @@
         android:text="지역명"
         android:fontFamily="@font/pretendard_semibold"
         android:textColor="@color/gray600"
-        android:textSize="@dimen/location_select_button_text"
+        android:textSize="@dimen/region_button_text"
         android:textStyle="bold"
         />
 
