--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--상단 지역 설정 레이아웃 관련-->
-    <dimen name="location_select_layout_padding_vertical">8dp</dimen>
-    <dimen name="location_select_layout_padding_horizontal">14dp</dimen>
-    <dimen name="location_select_layout_feedback_button_width">16dp</dimen>
-    <dimen name="location_select_layout_feedback_button_height">13dp</dimen>
-    <dimen name="location_select_layout_feedback_button_padding">8dp</dimen>
-    <dimen name="location_select_button_width">50dp</dimen>
-    <dimen name="location_select_button_height">25dp</dimen>
-    <dimen name="location_select_button_text">12dp</dimen>
-    <dimen name="location_select_button_margin_start">8dp</dimen>
+    <dimen name="region_layout_padding_vertical">8dp</dimen>
+    <dimen name="region_layout_padding_horizontal">14dp</dimen>
+    <dimen name="region_button_text">12dp</dimen>
+    <dimen name="region_layout_height">48dp</dimen>
+    <dimen name="region_button_margin">8dp</dimen>
+    <dimen name="region_button_padding_vertical">8dp</dimen>
+    <dimen name="region_button_padding_horizontal">14dp</dimen>
 
     <!--'내 주변' 버튼 관련-->
     <dimen name="current_location_width">60dp</dimen>
