--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="gray900">#212121</color>
     <color name="blackTransparent">#40000000</color>
     <color name="colorAccent">#FA560F</color>
+    <color name="reportButtonColor">#6DB5CB</color>
 </resources>
