--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -59,9 +59,9 @@
                 />
 
             <TextView
+                android:id="@+id/menu_report_description_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/restaurant_info_menu_report_description"
                 android:layout_gravity="center"
                 android:textSize="@dimen/menu_report_description_text_size"
                 android:textColor="@color/black"
