--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -42,8 +42,8 @@
                 android:background="@drawable/color_button_background"
                 android:paddingVertical="0dp"
                 android:paddingHorizontal="36dp"
-                android:layout_marginVertical="16dp"
-                />
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp" />
 
             <View
                 android:layout_width="match_parent"
